k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: div4u
  labels:
    name: div4u
    app: div4u-service
